--- a/tmnt.html
+++ b/tmnt.html
@@ -12,14 +12,14 @@
 	<div class="banner">
 	  <img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/banner.png" alt="Rancid Tomatoes">
 	</div>
-    
-	<h1>TMNT (2007)</h1>
-
+    <div class="title">
+	  <h1>TMNT (2007)</h1>
+    </div>
     <div class="main">
       <div class="leftColumn">
 	    <div class="leftCBanner">
 	      <img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/rottenbig.png" alt="Rotten">
-	      <span id="percentage">32%</span> <span id="reviewC">(88 reviews total)</span>
+	      <p><span id="percentage">32%</span> <span id="reviewC">(88 reviews total)</span></p>
         </div>
 
         <div class="leftReview">  
